--- a/etc/WEB-INF/web.xml
+++ b/etc/WEB-INF/web.xml
@@ -56,7 +56,7 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
-    <!-- error pages
+    <!-- error pages -->
     <error-page>
         <exception-type>org.apache.jasper.JasperException</exception-type>
         <location>/error.jsp</location>
@@ -64,7 +64,14 @@
     <error-page>
         <error-code>404</error-code>
         <location>/error.jsp</location>
+    </error-page>   
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error.jsp</location>
     </error-page>
-    -->
-    
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/error.jsp</location>
+    </error-page>  
+      
 </web-app>
