--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
 <!--
     ant-buildfile for commandline, web application and web service
     @(#) $Id: build.xml 976 2013-02-02 16:44:18Z gfis $
+    2016-09-23: MainFilter was main-class
     2016-09-11: fill.lib
     2016-09-02: properties ${tomcat.*}, core.jar
     2007-02-14: use ant import - test doesn't work yet
@@ -24,7 +25,7 @@
 -->
 <project name="gramword" default="all" basedir=".">
     <property name="app.version"        value="1.4"/>
-    <property name="app.main-class"     value="org.teherba.gramword.MainFilter"/>
+    <property name="app.main-class"     value="org.teherba.gramword.LoadDict"/>
     <property name="tomcat.base"        value="/var/lib/tomcat" />
     <property name="tomcat.home"        value="/usr/share/tomcat" />
     <import file="build-import.xml" />
