--- a/etc/WEB-INF/web.xml
+++ b/etc/WEB-INF/web.xml
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" 
-    "http://java.sun.com/dtd/web-app_2_3.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
     @(#) $Id: web.xml 805 2011-09-20 06:41:22Z gfis $
     Copyright (c) 2007 Dr. Georg Fischer <punctum@punctum.com>
+    2017-05-29: Servlet 3.0, ErrorServlet
     2016-09-12: servlet moved to package gramword.web
     2011-09-17: with org.teherba.dbat.DBCPoolingListener
     2007-02-15: minimal version
 -->
-<web-app>
 <!--
  * Copyright 2006 Dr. Georg Fischer <punctum at punctum dot kom>
  *
@@ -24,6 +22,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->   
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+        version="3.0">
     <display-name>gramword</display-name>
     <description>
         Show the grammatical type of words in German text
@@ -40,18 +42,29 @@
         <servlet-name>Servlet</servlet-name>
         <servlet-class>org.teherba.gramword.web.GramwordServlet</servlet-class>
     </servlet>
-   
     <servlet-mapping> 
         <servlet-name>Servlet</servlet-name>
         <url-pattern>/servlet</url-pattern>
     </servlet-mapping>
     
+    <servlet>
+        <servlet-name>ErrorServlet</servlet-name>
+        <servlet-class>org.teherba.common.web.ErrorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ErrorServlet</servlet-name>
+        <url-pattern>/ErrorServlet</url-pattern>
+    </servlet-mapping>
+    <error-page>
+        <location>/ErrorServlet</location>
+    </error-page>
+
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
-    <!-- error pages -->
+<!-- error pages 
+        <welcome-file>index.jsp</welcome-file>
     <error-page>
         <exception-type>org.apache.jasper.JasperException</exception-type>
         <location>/error.jsp</location>
@@ -68,5 +81,5 @@
         <exception-type>java.lang.Exception</exception-type>
         <location>/error.jsp</location>
     </error-page>  
-      
+-->
 </web-app>
